src/test/deca/codegen/valid/equals.deca
class A{
	int x ;
}

{  A a = new A();
  boolean b  = a.equals(a);
  if (b){
  println("Yes Mama");
  }
}
