src/test/deca/codegen/invalid/initField-allKind.deca
class A {
    int d;
    float b;
    boolean c;
    A a = new A();
}

{
    A a = new A();
    println(a.d);
    println(a.b);
    if (a.c == false) {
        println("ok");
    }
    if (a.a == null) {
        println("ok");
    }
}
